--- a/app/views/notes/edit.html.haml
+++ b/app/views/notes/edit.html.haml
@@ -1,3 +1,6 @@
-%h1 Edit your note
-= render 'form'
-= link_to "Cancel", note_path
+.wrapper_with_padding
+	%h1 Edit Note
+
+	= render 'form'
+
+	= link_to "Cancel", note_path
